--- a/node-crawl/package.json
+++ b/node-crawl/package.json
@@ -13,6 +13,7 @@
     "asyn": "0.0.1",
     "async": "^2.1.4",
     "cheerio": "^0.22.0",
+    "express": "^4.14.0",
     "superagent": "^3.1.0"
   }
 }
